After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 577862 - FileFilter name not set
FileFilter name not set
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkBuilder
2.16.x
Other All
: Normal minor
: ---
Assigned To: GtkBuilder maintainers
GtkBuilder maintainers
Depends on:
Blocks:
 
 
Reported: 2009-04-03 16:10 UTC by Severin Heiniger
Modified: 2015-03-08 13:12 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26


Attachments
Simple demonstration of the issue (438 bytes, text/x-python)
2009-04-03 16:11 UTC, Severin Heiniger
Details

Description Severin Heiniger 2009-04-03 16:10:12 UTC
Please describe the problem:
I stumbled upon this issue when I was porting the PyGTK application LottaNZB (http://www.lottanzb.org/) from libglade to GtkBuilder. If a FileFilter is specified in a glade file, the name of the resulting object will not be set to what has been chosen in the glade file.

Steps to reproduce:
I attached a simple Python file that reproduces the problem.

Actual results:
get_name() returns None.

Expected results:
I expected the get_name() method of the FileFilter object to return "my_file_filter" instead of None.

Does this happen every time?
Positive.

Other information:
I'm not entirely sure if this is really a bug or intended behaviour. However, for me the bug was unlikely to be caused by the Python bindings, that's why I filed it agains GtkBuilder.
Comment 1 Severin Heiniger 2009-04-03 16:11:44 UTC
Created attachment 132015 [details]
Simple demonstration of the issue
Comment 2 Matthias Clasen 2009-04-08 00:01:21 UTC
I guess creating GtkFileFilter objects with GtkBuilder is not very useful at the moment, since there is no way to set any of the filter attributes. To get that, we need to a make the name a regular property (it does not make sense to map it to the object id, btw, since it is supposed to be translated). Then we need to add some custom tag support for adding mime types, etc.
Comment 3 Johan (not receiving bugmail) Dahlin 2009-04-08 00:13:00 UTC
However, if we really want to support the building of GtkFileFilter we could easily solve the initial problem reported in this bug by just implement GtkBuildable->get_name for GtkFileFilter similar to what GtkAction does.